chore: fixed doc

--- a/custom_components/manifest.json
+++ b/custom_components/manifest.json
@@ -2,7 +2,7 @@
   "domain": "YROTest",
   "name": "YROTest Integration",
   "config_flow": false,
-  "documentation": "https://github.com/yrobert/test/blob/main/README.md",
+  "documentation": "https://github.com/yrobert/YROTest",
   "requirements": ["requests"],
   "codeowners": ["@yrobert"],
   "version": "0.1"
